--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "turncypher/composer-demo",
   "type": "project",
-  "license": "Apache",
+  "license": "MIT",
   "authors": [
     {
       "name": "turncypher",
